--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,48 @@
-.marked {
-    background-color: yellow;
-    border: 3px red solid;
-  }
-
-.container-game{
-  text-align: center;
-  padding: 20px;
+body{
+    font-family: 'Josefin Slab', serif;
+    font-size: 24px;
+    color: black;
+    text-align: center;
+    background-image: url("../images/brushed.png");
 }
 
+h1{
+  font-family: 'Vast Shadow', cursive;
+  font-size: 70px;
+  color: black;
+  padding-bottom: 20px;
+}
+.question-text{
+  font-size: 30px;
+}
+.answerChoice{
+  display: block;
+  background-color:#f4511e;;
+  border: none;
+  color: white;
+  padding: 10px 30px;
+  text-align: center;
+  font-size: 20px;
+  margin: 4px 200px 4px 200px;
+  opacity: 0.8;
+  transition: 0.3s;
+  text-decoration: none;
+  cursor: pointer;
+}
+.answerChoice:hover {opacity: 1}
+
+.button, button {
+  width: 200px;
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 20px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  text-decoration: none;
+  cursor: pointer;
+}
+.button:hover {opacity: 1}
